src- Version 4.19/objects/Payment_Scheduler__c.object
<CustomObject>
    <customHelpPage>support</customHelpPage>
    <fields>
        <fullName>Currency__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Currency</label>
        <referenceTo>Currency__c</referenceTo>
        <relationshipLabel>Payment Schedulers</relationshipLabel>
        <relationshipName>Payment_Schedulers2</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Default_Payment_Gateway__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Payment Gateway</label>
        <referenceTo>Gateway__c</referenceTo>
        <relationshipLabel>Payment Schedulers</relationshipLabel>
        <relationshipName>Payment_Schedulers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>Apex Job Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Payment_Batch__c</fullName>
        <label>Payment Batch</label>
        <picklist>
            <picklistValues>
                <fullName>Batch 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Batch 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Payment_Options__c</fullName>
        <label>Payment Options</label>
        <picklist>
            <picklistValues>
                <fullName>Credit Card</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Start_date_and_time__c</fullName>
        <defaultValue>Now()</defaultValue>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Target_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</description>
        <inlineHelpText>If you use Invoice Date as 15mar &amp; Target Date as 30mar, the billing will run on 15mar and the charges will be calculated up to 30mar.</inlineHelpText>
        <label>Target Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Target_Day_Of_Month__c</fullName>
        <description>If you use Invoice Day as 15 &amp; Target Day as 25.Every month billing will run on 15th and the charges will be calculated up to the 25th of the same month.If you pick 31 and the running month doesn&apos;t have 31 days, it will default to last day of that month.</description>
        <inlineHelpText>If you use Invoice Day as 15 &amp; Target Day as 25.Every month billing will run on 15th and the charges will be calculated up to the 25th of the same month.If you pick 31 and the running month doesn&apos;t have 31 days, it will default to last day of that month.</inlineHelpText>
        <label>Target Day Of Month</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Target_Day_of_Week__c</fullName>
        <description>Target Day of week</description>
        <inlineHelpText>Target Day of week like 1 for sunday</inlineHelpText>
        <label>Target Day of Week</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Type of Schedule.
Once - Billing will be done only one time.
Daily  - Billing will be repeated continuously daily and so on</description>
        <inlineHelpText>Type of Schedule.
Once - Billing will be done only one time.
Daily  - Billing will be repeated continuously daily and so on</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Once</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Daily</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Payment Scheduler</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Currency__c</columns>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Payment Schedulers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Payment Scheduler Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Payment Schedulers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>